# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  flake.nix  justfile  spec.yaml
.github/workflows/: audit.yml  ci.yml
migrations/: 20230212201117_create_subscriptions_table.sql
postman/: Zero2Prod.postman_collection.json
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
