[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", default-features = false, features = [
    "http1",
    "tokio",
] }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
